--- a/front/package.json
+++ b/front/package.json
@@ -6,23 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "interface": "file:../interface",
+    "daisyui": "^3.9.4",
+    "interface": "../interface",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling-webpack": "^0.0.5",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/nextjs": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "css-loader": "^6.8.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
+    "postcss-loader": "^7.3.3",
+    "storybook": "^7.5.3",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
